fixed word-wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,7 @@ main section div{
   padding:10px 30px 20px 10px;;
   border-radius: 10px;
   margin:10px;
+  word-wrap: anywhere;
 }
 
 .received div {
